SERVER-40202 TransactionCoordinator should update replica set monitors based on participant responses