src/mongo/client/remote_command_targeter_mock.cpp
@@ -64,9 +64,14 @@ SharedSemiFuture<HostAndPort> RemoteCommandTargeterMock::findHostWithMaxWait(
     return _findHostReturnValue;
 }
 
-void RemoteCommandTargeterMock::markHostNotMaster(const HostAndPort& host, const Status& status) {}
+void RemoteCommandTargeterMock::markHostNotMaster(const HostAndPort& host, const Status& status) {
+    stdx::lock_guard<stdx::mutex> lg(_mutex);
+    _hostsMarkedDown.insert(host);
+}
 
 void RemoteCommandTargeterMock::markHostUnreachable(const HostAndPort& host, const Status& status) {
+    stdx::lock_guard<stdx::mutex> lg(_mutex);
+    _hostsMarkedDown.insert(host);
 }
 
 void RemoteCommandTargeterMock::setConnectionStringReturnValue(const ConnectionString returnValue) {
@@ -75,6 +80,13 @@ void RemoteCommandTargeterMock::setConnectionStringReturnValue(const ConnectionS
 
 void RemoteCommandTargeterMock::setFindHostReturnValue(StatusWith<HostAndPort> returnValue) {
     _findHostReturnValue = std::move(returnValue);
+}
+
+std::set<HostAndPort> RemoteCommandTargeterMock::getAndClearMarkedDownHosts() {
+    stdx::lock_guard<stdx::mutex> lg(_mutex);
+    auto hostsMarkedDown = _hostsMarkedDown;
+    _hostsMarkedDown.clear();
+    return hostsMarkedDown;
 }
 
 }  // namespace mongo
